<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FF001E2C"
    tools:context=".splash">

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/resultTitle"
        android:layout_width="match_parent"
        app:layout_constraintBottom_toTopOf="@+id/wonPart"
        android:text="Result "
        android:textSize="@dimen/x7_2"
        android:textStyle="bold"
        android:textColor="#FFC107"
        android:gravity="center"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="22dp"
        android:layout_height="wrap_content"/>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/wonPart"
        android:layout_width="match_parent"
        android:text="@string/be_careful"
        android:textSize="@dimen/sp24"
        app:layout_constraintBottom_toTopOf="@+id/buttontitile"
        android:textStyle="bold"
        android:textColor="#C53C3C"
        android:gravity="center"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginStart="@dimen/dp10"
        android:layout_marginEnd="@dimen/dp10"
        android:layout_marginTop="60dp"
        app:layout_constraintTop_toBottomOf="@+id/resultTitle"
        android:layout_height="wrap_content"/>
    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/buttontitile"
        android:layout_width="match_parent"
        android:text="@string/choose_a_buttom"
        android:textColor="#DFDCDC"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/hagigat"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/wonPart"
        android:textSize="@dimen/sp24"
        android:gravity="center"
        android:layout_marginTop="52dp"
        android:layout_height="wrap_content"/>
    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/hagigat"
        android:layout_width="wrap_content"
        android:text="@string/hagigat"
        android:textSize="@dimen/x5"
        app:layout_constraintBottom_toTopOf="@+id/texthagigat"
        android:textStyle="bold"
        android:textColor="#FF0000"
        android:backgroundTint="#161C20"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="20dp"
        android:layout_marginStart="300dp"
        app:layout_constraintTop_toBottomOf="@id/buttontitile"
        android:layout_height="wrap_content"/>
    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/texthagigat"
        android:layout_width="match_parent"
        android:hint="@string/hagigatbox"
        android:textStyle="bold"
        android:textSize="@dimen/x3"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginStart="10dp"
        app:layout_constraintBottom_toTopOf="@+id/jorat"
        android:layout_marginEnd="@dimen/dp10"
        android:textColorHint="#DFDCDC"
        android:background="#424242"
        android:gravity="center"
        app:layout_constraintTop_toBottomOf="@+id/hagigat"
        android:layout_marginTop="20dp"
        android:layout_height="70dp"/>
    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/jorat"
        android:layout_width="wrap_content"
        android:text="@string/jorat"
        android:textSize="@dimen/x5"
        android:textStyle="bold"
        android:textColor="#FF0000"
        android:backgroundTint="#161C20"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/textjorat"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="@dimen/x5"
        android:layout_marginStart="300dp"
        app:layout_constraintTop_toBottomOf="@id/texthagigat"
        android:layout_height="wrap_content"/>
    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/textjorat"
        android:layout_width="match_parent"
        android:hint="@string/joratbox"
        android:textStyle="bold"
        android:textSize="@dimen/x3"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:textColorHint="#DFDCDC"
        android:layout_marginBottom="120dp"
        app:layout_constraintBottom_toTopOf="@+id/bakcbutton"
        android:background="#424242"
        android:gravity="center"
        app:layout_constraintTop_toBottomOf="@+id/jorat"
        android:layout_marginTop="20dp"
        android:layout_height="70dp"/>
    <androidx.appcompat.widget.AppCompatButton
        android:layout_width="match_parent"
        android:id="@+id/bakcbutton"
        android:backgroundTint="#FF0000"
        android:text="Back"
        android:textColor="#DFDCDC"
        android:textSize="@dimen/x3"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginStart="@dimen/dp10"
        android:layout_marginEnd="@dimen/dp10"
        app:layout_constraintTop_toBottomOf="@+id/textjorat"
        android:textStyle="bold"
        android:layout_height="56dp"/>
</androidx.constraintlayout.widget.ConstraintLayout>